# chuckle-chick

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml
assets/pets/huangji-daxiao/: atlas.json  pet.json
requirements/: README.md  REQ-0001-project-structure-and-requirement-workflow.md  REQ-0002-desktop-pet-technical-foundation.md  REQ-0003-directional-mouse-interactions.md  REQ-0004-pet-scaling-experience.md  REQ-0005-hover-animation.md  REQ-0006-windows-x64-ci-build.md  REQ-0007-pet-quick-panel-and-speech-bubbles.md  TEMPLATE.md
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: assistant-window.json  pet-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant.rs  lib.rs  main.rs  preferences.rs  tray.rs
src/components/: AssistantView.vue  PetPortrait.vue  PetStage.vue  SettingsView.vue
src/pet-assets/: loadPetAsset.test.ts  loadPetAsset.ts  types.ts
src/pet-core/: AnimationFrameSequence.test.ts  AnimationFrameSequence.ts  AnimationTimeline.test.ts  AnimationTimeline.ts  DirectionalInteraction.test.ts  DirectionalInteraction.ts  PetPointerGesture.test.ts  PetPointerGesture.ts  RandomActionScheduler.test.ts  RandomActionScheduler.ts  SpeechBubbleQueue.test.ts  SpeechBubbleQueue.ts
src/pet-renderer/: PixiPetRenderer.ts
src/platform/: assistant.ts  preferences.ts  window.ts
